--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>NielsVanheertum-BA</h1>
+    <p>Hallo ik ben Niels Vanheertum en ik zit op de school BA zandpoort in Mechelen en ik vogl daar de richting Applicatie & Databeheer.</p>
 </body>
 </html>
